[package]
name = "burrow-gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
relm4 = { version = "0.6", features = ["libadwaita", "gnome_44"]}
burrow = { version = "*", path = "../burrow/" }
tokio = { version = "1.35.0", features = ["time", "sync"] }
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
serde = { version = "1", features = ["derive"] }
url = "2.5.0"
reqwest = { version = "0.12.4", features = ["json"] }

[build-dependencies]
anyhow = "1.0"
glib-build-tools = "0.18.0"
