project('burrow-gtk', 'rust', 
          version: '0.1.0',
    meson_version: '>= 0.62.0',
  default_options: [ 'warning_level=2', 'werror=false', ],
)

i18n = import('i18n')
gnome = import('gnome')

glib_compile_resources = find_program('glib-compile-resources', required: true)
glib_compile_schemas = find_program('glib-compile-schemas', required: true)
desktop_file_validate = find_program('desktop-file-validate', required: false)
appstream_util = find_program('appstream-util', required: false)
fc_cache = find_program('fc-cache', required: false)
update_mime_database = find_program('update-mime-database', required: false)

dependency('gtk4', version: '>= 4.12')
dependency('libadwaita-1', version: '>= 1.4')

subdir('po')
subdir('data')
subdir('src')

gnome.post_install(
  glib_compile_schemas: true,
  gtk_update_icon_cache: true,
  update_desktop_database: true,
)
