[package]
name = "tun"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"
fehler = "1.0"
nix = { version = "0.26", features = ["ioctl"] }
socket2 = "0.5"
tokio = { version = "1.28", features = [] }
byteorder = "1.4"
tracing = "0.1"
log = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
schemars = { version = "0.8", optional = true }

futures = { version = "0.3.28", optional = true }
netlink-packet-route = "0.19.0"
netlink-packet-core = "0.7.0"


[features]
serde = ["dep:serde", "dep:schemars"]
tokio = ["tokio/net", "dep:futures"]

[target.'cfg(feature = "tokio")'.dev-dependencies]
tokio = { features = ["rt", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
interfaces = "0.0.9"

[target.'cfg(windows)'.dependencies]
lazy_static = "1.4"
libloading = "0.7"
tempfile = "3.5"
widestring = "1.0"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
] }

[target.'cfg(windows)'.build-dependencies]
anyhow = "1.0"
bindgen = "0.65"
reqwest = { version = "0.11", features = ["native-tls"] }
ssri = { version = "9.0", default-features = false }
tokio = { version = "1.28", features = ["rt", "macros"] }
zip = { version = "0.6", features = ["deflate"] }
